# eqassertions

./: LICENSE  Pipfile  README.rst  noxfile.py  setup.cfg  setup.py
.github/workflows/: package.yml  python.yml
eqassertions/: __init__.py
tests/: test_it.py
