[metadata]
name = eqassertions
author = Atsushi Odagiri
author_email = aodagx@gmail.com
url = https://github.com/aodag/eqassertions
license = MIT
description = assertions in __eq__methods
long_description = file: README.rst

[options]
packages = find:

[options.extras_require]
testing =
  pytest
  pytest-cov
  pytest-randomly
dev =
  build
  nox
  flake8